# rk3588-elevator-monitor

./: LICENSE  README.md
backend_cpp/: CMakeLists.txt
backend_cpp/include/app/: ApplicationRuntime.hpp
backend_cpp/include/media/: CameraStreamService.hpp  DetectionTypes.hpp  MediaManager.hpp  MediaTypes.hpp  RknnDetector.hpp  VideoAdPlayer.hpp
backend_cpp/include/network/: UdpCommandServer.hpp  UdpTelemetryClient.hpp
backend_cpp/include/protocol/: ElevatorFrameParser.hpp
backend_cpp/include/simulation/: ElevatorEnvSimulator.hpp
backend_cpp/include/ui/: ElevatorUiController.hpp
backend_cpp/src/: main.cpp
backend_cpp/src/app/: ApplicationRuntime.cpp
backend_cpp/src/media/: CameraStreamService.cpp  MediaManager.cpp  RknnDetector.cpp  VideoAdPlayer.cpp
backend_cpp/src/network/: UdpCommandServer.cpp  UdpTelemetryClient.cpp
backend_cpp/src/protocol/: ElevatorFrameParser.cpp
backend_cpp/src/simulation/: ElevatorEnvSimulator.cpp
backend_cpp/src/ui/: ElevatorUiController.cpp
frontend_py/: cloud_server.py  mqtt_client.py  云端.html
lv_port_pc_vscode/lvgl_ui/: project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
lv_port_pc_vscode/lvgl_ui/components/: ui_comp_hook.c
lv_port_pc_vscode/lvgl_ui/screens/: ui_Screen1.c  ui_Screen1.h
scripts/: build_cross.sh  clean_sysroot.sh  deploy_to_board.sh  sync_sysroot.sh
vedio_ai/opencv/lib/: libopencv_imgcodecs.so.4.5d  libopencv_video.so.4.5d
